--- a/googlemap/map_with_fusion_table/templates/map_with_fusion_table/index.html
+++ b/googlemap/map_with_fusion_table/templates/map_with_fusion_table/index.html
@@ -33,11 +33,12 @@
       function initialize() {
           //var myLatlng = new google.maps.LatLng(47.3537106195136,8.5693359375);
           // var myLatlng = new google.maps.LatLng(46.502173483540716, 8.103103637695312);
-          var myLatlng = new google.maps.LatLng(0,0);
+          // var myLatlng = new google.maps.LatLng(0,0);
+          var myLatlng = new google.maps.LatLng(35.0000, 103.0000);
           var myOptions = {
           zoom: 10,
           center: myLatlng,
-          mapTypeId: google.maps.MapTypeId.TERRAIN
+          mapTypeId: google.maps.MapTypeId.ROADMAP
         };
 
 
